--- a/styles/index.styl
+++ b/styles/index.styl
@@ -131,10 +131,12 @@ h1, h2, h3, h4, h5, h6
 h1
   font-size 2.2rem
 
-h2
-  font-size 1.65rem
-  padding-bottom .3rem
-  border-bottom 1px solid $borderColor
+.brooks h2,
+h2.brooks {
+  font-size: 1.65rem;
+  padding-bottom: .3rem;
+  border-bottom: 1px solid $borderColor;
+}
 
 h3
   font-size 1.35rem
