Namespacing link styles to .brooks
- Removing AlgoliaSearchBox component
- Adding checkbox markdown plugin

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -77,10 +77,14 @@ body
   img
     max-width 100%
 
-a
-  font-weight 500
-  color $accentColor
-  text-decoration none
+a.brooks,
+a.sidebar-link,
+a.nav-link,
+a.repo-link {
+  font-weight: 500;
+  color: $accentColor;
+  text-decoration: none;
+}
 
 p a code
   font-weight 400
