--- a/styles/index.styl
+++ b/styles/index.styl
@@ -59,9 +59,6 @@ body
   > *:first-child
     margin-top $navbarHeight
 
-  a:hover
-    text-decoration underline
-
   p.demo
     padding 1rem 1.5rem
     border 1px solid #ddd
@@ -84,6 +81,13 @@ a.repo-link {
   font-weight: 500;
   color: $accentColor;
   text-decoration: none;
+}
+
+a.brooks:hover,
+a.sidebar-link:hover,
+a.nav-link:hover,
+a.repo-link:hover {
+  text-decoration: underline;
 }
 
 p a code
